--- a/config/routes/product_blacklist.yml
+++ b/config/routes/product_blacklist.yml
@@ -6,8 +6,8 @@ idealofeed_product_blacklist_index:
   methods: [GET]
   defaults:
     _controller: 'IdealoFeed\Controller\ProductBlacklistController::indexAction'
-    _legacy_controller: ProductBlacklist
-    _legacy_link: ProductBlacklist
+    _legacy_controller: IdealoFeedProductBlacklist
+    _legacy_link: IdealoFeedProductBlacklist
 
 idealofeed_product_blacklist_search:
   path: /product/blacklist
@@ -15,21 +15,21 @@ idealofeed_product_blacklist_search:
   defaults:
     _controller: 'IdealoFeed\Controller\ProductBlacklistController::searchAction'
     redirectRoute: idealofeed_product_blacklist_index
-    _legacy_controller: ProductBlacklist
-    _legacy_link: ProductBlacklist
+    _legacy_controller: IdealoFeedProductBlacklist
+    _legacy_link: IdealoFeedProductBlacklist
 
 idealofeed_product_blacklist_delete:
   path: /product/blacklist/delete
   methods: [POST]
   defaults:
     _controller: 'IdealoFeed\Controller\ProductBlacklistController::deleteAction'
-    _legacy_controller: ProductBlacklist
-    _legacy_link: ProductBlacklist
+    _legacy_controller: IdealoFeedProductBlacklist
+    _legacy_link: IdealoFeedProductBlacklist
 
 idealofeed_product_blacklist_create:
   path: /product/blacklist/create
   methods: [GET, POST]
   defaults:
     _controller: 'IdealoFeed\Controller\ProductBlacklistController::createAction'
-    _legacy_controller: ProductBlacklist
-    _legacy_link: ProductBlacklist
+    _legacy_controller: IdealoFeedProductBlacklist
+    _legacy_link: IdealoFeedProductBlacklist
